test/error/ast/ArrayIndexNotInt.mod
MODULE ArrayIndexNotInt;
VAR a: ARRAY 1 OF INTEGER; b: CHAR;
BEGIN
  a[b];
END ArrayIndexNotInt.
